# multi-resolution-crowd-counting

./: .gitignore  .gitmodules  downscale_nwpu.py  ideas.md  main.py  pyproject.toml  test.py
PET-main/: README.md  main.py  preprocess_dataset.py
PET-main/datasets/: NWPU.py
docs/: README.md  data.md
docs/ideas/: hr_lr_consistency_loss.md  hr_only_baseline.md  (+7 more)
entrypoints/: analyze_bias.py  annotate_img.py  anotate_predict.py  check_single_image.py  downscale_nwpu.py  eval_checkpoint.py  eval_dann_tta.py  eval_finetuned_models.py  eval_nwpu_downscaled.py  eval_nwpu_downscaled_count.py  eval_nwpu_native.py  eval_zoom_pairs.py  heatmap.py  heatmap_worstcase.py  replot_bias.py  train_dann.py  train_dann_v2.py  train_finetune_paired_hr_lr.py  train_finetune_res_aug.py  visualize_density_maps.py
evaluation/: compare_resolutions.py  eval_nwpu_downscaled.py  eval_nwpu_native.py  eval_zoom_pairs.py
jobs/: basecase.sh  dowscale.sh  eval_finetuned_models.sh  finetune_regularization.sh  heatmap.sh  random.sh  run_baseline_eval.sh  run_dann.sh  run_dann_gpua40.sh  run_dann_gpul40s.sh  run_dann_v2_2x.sh  run_dann_v2_4x.sh  run_dann_v2_mix_methods.sh  run_dann_v2_mixed.sh  run_eval_baseline.sh  run_eval_dann.sh  run_eval_dann_tta.sh  run_eval_dann_v2_2x.sh  run_eval_dann_v2_mixed.sh  run_eval_weights.sh  run_finetune_res_aug.sh  run_high_res_scratch.sh  run_low_res.sh  run_mixed_res.sh  submit_dann_v2.sh  submit_dann_v2_mix.sh  test.sh  train.sh
scratch/: PRESENTATION.md  plot_dann_training.py  plot_dann_v1_results.py  plot_dann_v1_training.py
scripts/: verify_trainable_params.py  visualize_resolution_augment.py
src/: dataset.py  logger.py  settings.py
training/: finetune_consistency_reg.md  finetune_consistency_reg.py  finetune_resolution_aug.md  finetune_resolution_aug.py
transform/: check_downscale.py
(+97 files in other folders)
