[project]
name = "multi-resolution-crowd-counting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.2",
    "ftfy>=6.3.1",
    "numpy==1.26.4",
    "matplotlib>=3.10.8",
    "regex>=2026.4.4",
    "scipy==1.12.0",
    "tensorboardX==2.6.2.2",
    "timm>=1.0.26",
    "torch==2.2.1",
    "torchvision==0.17.1",
    "wandb>=0.25.0",
    "setuptools<81",
]

